// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionnairePage /> renders correctly 1`] = `
<QuestionnairePage__QuestionnaireContainer>
  <Relay(StepPageHeader)
    step={
      Object {
        "$fragmentRefs": null,
      }
    }
  />
  <Relay(UserReplies)
    questionnaire={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "multipleRepliesAllowed": false,
        "step": Object {
          "$fragmentRefs": null,
        },
        "viewerReplies": Array [
          Object {
            "id": "1",
          },
          Object {
            "id": "2",
          },
        ],
      }
    }
  />
  <div
    className="wrapper-replies-max"
  >
    <Icon
      color="#1D8293"
      name="information"
      size={16}
    />
    <FormattedMessage
      id="reply.user_has_reply.error"
      values={Object {}}
    />
  </div>
  <Relay(StepPageFooter)
    step={
      Object {
        "$fragmentRefs": null,
      }
    }
  />
</QuestionnairePage__QuestionnaireContainer>
`;

exports[`<QuestionnairePage /> renders correctly with multipleRepliesAllowed 1`] = `
<QuestionnairePage__QuestionnaireContainer>
  <Relay(StepPageHeader)
    step={
      Object {
        "$fragmentRefs": null,
      }
    }
  />
  <Relay(UserReplies)
    questionnaire={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "multipleRepliesAllowed": true,
        "step": Object {
          "$fragmentRefs": null,
        },
        "viewerReplies": Array [
          Object {
            "id": "1",
          },
          Object {
            "id": "2",
          },
        ],
      }
    }
  />
  <button
    className="btn-answer-again"
    onClick={[Function]}
    type="button"
  >
    <FormattedMessage
      id="answer-again"
      values={Object {}}
    />
  </button>
  <Relay(StepPageFooter)
    step={
      Object {
        "$fragmentRefs": null,
      }
    }
  />
</QuestionnairePage__QuestionnaireContainer>
`;

exports[`<QuestionnairePage /> renders correctly without viewerReplies 1`] = `
<QuestionnairePage__QuestionnaireContainer>
  <Relay(StepPageHeader)
    step={
      Object {
        "$fragmentRefs": null,
      }
    }
  />
  <Relay(UserReplies)
    questionnaire={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "multipleRepliesAllowed": false,
        "step": Object {
          "$fragmentRefs": null,
        },
        "viewerReplies": Array [],
      }
    }
  />
  <Relay(Connect(ReplyCreateFormWrapper))
    questionnaire={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "multipleRepliesAllowed": false,
        "step": Object {
          "$fragmentRefs": null,
        },
        "viewerReplies": Array [],
      }
    }
  />
  <Relay(StepPageFooter)
    step={
      Object {
        "$fragmentRefs": null,
      }
    }
  />
</QuestionnairePage__QuestionnaireContainer>
`;
